Fixed spacing / logos in 'About' section

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,8 @@ body {
 }
 
 .combined-logo{
-    width: 20em;
+    margin: 0 auto;
+    width: 50%;
     margin: 0 auto;
 }
 
